--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "types": "./dist/types/index.d.ts",
   "private": false,
   "scripts": {
+    "dev": "tsc --watch",
     "build": "tsc && webpack"
   },
   "keywords": [
